# RogueLikeGame

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.config/powershell/: Microsoft.PowerShell_profile.ps1
assets/maps/: 00.tmx  01.tmx  02.tmx  03.tmx  04.tmx  10.tmx  11.tmx  12.tmx  13.tmx  14.tmx  Maps.tiled-project  Maps.tiled-session  map.tmx  map0.txt  map1.tmx  map1.txt  map2.tmx  map2.txt  map3.tmx  map3.txt  roguelike.tsx
assets/tilesets/: Catacombs.tsx  Dungeon_01_obj.tsx  animaitons.tsx  doors_lever_chest_animation.tsx  dungeon.tsx  floorwalls.tsx  map_02.tsx  objects_random.tsx  roguelike.tsx
docs/: ANIMATIONS.md
include/: SDL.h  SDL_vulkan.h  vk_initializers.h  vk_types.h
src/: main.cpp
src/app/: Assets.cpp  Device.cpp  GameSetup.cpp  GameSetup.h  Player.cpp  Player.h  VulkanImGuiApp.cpp  Window.cpp  game.cpp  game.h  main.cpp
src/app/classes/: AnimationController.cpp  AnimationController.h  CombatUtils.cpp  CombatUtils.h  Entity.cpp  Entity.h  LivingEntity.cpp  LivingEntity.h  Map.cpp  Map.h  Maps.cpp  MathUtils.h  Npc.cpp  Npc.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Sprite.cpp  Sprite.h  StaticEntity.cpp  StaticEntity.h  World.cpp  World.h  entity.cpp  entity.h
src/app/classes/npc/: ChaseController.cpp  ChaseController.h  INpcController.cpp  INpcController.h  MeleeController.cpp  MeleeController.h  Npc.cpp  Npc.h  RangeController.cpp  RangeController.h
src/engine/gfx/: Assets.cpp  Assets.h  ImGuiInit.cpp  VulkanImGuiApp.cpp  VulkanImGuiApp.h
src/engine/vk/: Device.cpp  Instance.cpp  Swapchain.cpp  SyncAndDescriptors.cpp  Window.cpp
src/game/combat/: CombatUtils.cpp  CombatUtils.h
src/game/entities/: Entity.cpp  Entity.h  LivingEntity.cpp  LivingEntity.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  StaticEntity.cpp  StaticEntity.h
src/game/entities/animation/: AnimationController.cpp  AnimationController.h
src/game/factory/: ItemFactory.cpp  ItemFactory.h  NpcFactory.cpp  NpcFactory.h  PlayerFactory.cpp  PlayerFactory.h
src/game/item/: Consumable.h  Equipment.h  Inventory.cpp  Inventory.h  Item.h  Usable.h
src/game/item/consumable/: HealthPotion.h  SpeedPotion.h  StrengthPotion.h
src/game/item/usable/: Key.h
src/game/npc/: INpcController.h  MeleeController.cpp  MeleeController.h  Npc.cpp  Npc.h  NpcFactory.cpp  NpcFactory.h  RangeController.cpp  RangeController.h
src/game/world/: Map.cpp  Map.h  World.cpp  World.h
src/utils/: MathUtils.h
